--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -15,8 +15,15 @@ $weight-regular: 400;
   border:1px solid red;
   box-sizing: border-box;
 }
+
 @mixin default-border-radius{
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+}
+
+@mixin image-cover{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
