--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -14,7 +14,9 @@ body{
 
 p, a{
   font-size: 1.125rem;
+  line-height: 26px;
 }
+
 
 span, h2{
   font-size: 1.5rem;
@@ -53,4 +55,3 @@ section{
   width: 80%;
   position: relative;
 }
-
