--- a/src/components/Projects/style.scss
+++ b/src/components/Projects/style.scss
@@ -22,35 +22,71 @@ section.projects{
 }
 
 section.projects-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  & .container{
+  & .container {
 
-    & ul{
-      width:100%;
+    & ul {
+      width: 100%;
       margin: 55px 0;
       display: flex;
       justify-content: flex-start;
 
-      & li{
+      & li {
+        position: relative;
 
-        & a{
+        & a {
           text-decoration: none;
 
-          & .featured-image{
-            width:100%;
-            height: 350px;
+          & .featured-image {
+            width: 100%;
+            height: 550px;
             background-color: $grey-color;
             position: relative;
+            overflow: hidden;
 
-            & img{
+            & img {
+              filter: grayscale(100%);
+              @include transition;
               @include image-cover;
             }
           }
 
-          & .text-container{
-            & p:first-child{
-              margin: 10px 0;
+          & .text-container {
+            position: absolute;
+            left: 30px;
+            bottom: 30px;
+            color: $white-color;
+            opacity: 0;
+            @include transition;
+
+            & p {
+              width: 70%;
+
+              &:first-child {
+                margin: 10px 0;
+              }
             }
+          }
+        }
+
+        &:hover {
+
+          & .featured-image {
+
+            & img {
+              filter: grayscale(0);
+              transform: scale(1.05);
+              -moz-transform: scale(1.05);
+              -webkit-transform: scale(1.05);
+              -o-transform: scale(1.05);
+            }
+          }
+
+          & .text-container {
+            opacity: 1;
           }
         }
       }
