--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -4,7 +4,7 @@ $primary-font: 'Roboto Mono', monospace;
 
 $dark-color: rgba(25, 25, 25, 1);
 $dark-color-half: rgba(25, 25, 25, 0.5);
-$light-color: rgba(242, 242, 242, 1);
+$light-color: rgba(246, 238, 238, 1);
 $white-color: rgba(255, 255, 255, 1);
 $grey-color: rgba(196, 196, 196, 1);
 
@@ -26,4 +26,12 @@ $weight-regular: 400;
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+@mixin transition{
+  transition: .4s all linear;
+}
+
+@mixin between-nav-footer{
+  min-height: calc( 100vh - 240px);
 }
