--- a/src/theme/grid.scss
+++ b/src/theme/grid.scss
@@ -1,9 +1,3 @@
-.row-5, .row-4, .row-3, .row-2, .row-1{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-}
-
 $sizes: 100%, 49%, 32%, 23.5%, 18.4%;
 $sizes-no-margin: 100%, 50, 33.33%, 25%, 20%;
 
@@ -11,6 +5,9 @@ $sizes-no-margin: 100%, 50, 33.33%, 25%, 20%;
   $size: nth($sizes, $i);
 
   .row-#{$i} {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 
     & .grid-el {
       width: $size;
@@ -23,6 +20,20 @@ $sizes-no-margin: 100%, 50, 33.33%, 25%, 20%;
       &:nth-of-type(#{$i}n){
         margin-right: 0;
       }
+    }
+  }
+}
+
+@for $i from 1 through length($sizes) {
+  $size: nth($sizes, $i);
+
+  .row-#{$i}-no-margin {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    & .grid-el {
+      width: $size;
     }
   }
 }
