--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -37,10 +37,26 @@ h1,h2,h3,h4,h5,h6{
 h1{
   font-size: 4.5rem;
   -webkit-text-stroke: 2px $dark-color;
+  margin: 30px 0;
+
+  &.huge{
+    font-size: 9rem;
+  }
+}
+
+h2{
+
+  &.huge{
+    font-size: 4.5rem;
+  }
 }
 
 ul{
   list-style: none;
+}
+
+img{
+  max-width: 100%;
 }
 
 section{
@@ -53,5 +69,6 @@ section{
 
 .container{
   width: 80%;
+  max-width: 1600px;
   position: relative;
 }
