--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -26,7 +26,7 @@ section.home{
         & li{
           display: flex;
           align-items: center;
-          margin: 0 15px;
+          margin: 15px;
 
           & img{
             width: 43px;
