--- a/src/components/Projects/style.scss
+++ b/src/components/Projects/style.scss
@@ -16,6 +16,13 @@ section.projects{
 
       & li{
         margin: 0 10px;
+        cursor: pointer;
+        opacity: .8;
+        text-decoration: underline;
+
+        &.active-tag{
+          opacity: 1;
+        }
       }
     }
   }
@@ -34,8 +41,15 @@ section.projects-list{
       display: flex;
       justify-content: flex-start;
 
-      & li {
+      & li.case {
         position: relative;
+        //transition: opacity 0.4s cubic-bezier(0, 1, 0.4, 1), transform 0.4s cubic-bezier(0.18, 1.25, 0.4, 1), visibility 0.4s linear;
+
+        &.hidden{
+          @include dev-border;
+
+          animation: hideCase 2s;
+        }
 
         & a {
           text-decoration: none;
@@ -91,5 +105,14 @@ section.projects-list{
         }
       }
     }
+  }
+}
+
+@keyframes hideCase {
+  0%{
+    opacity: 0;
+  }
+  100%{
+   display: none;
   }
 }
