--- a/src/components/Projects/style.scss
+++ b/src/components/Projects/style.scss
@@ -47,7 +47,7 @@ section.projects-list{
         position: relative;
         //transition: opacity 0.4s cubic-bezier(0, 1, 0.4, 1), transform 0.4s cubic-bezier(0.18, 1.25, 0.4, 1), visibility 0.4s linear;
 
-        &.active{
+        &.hidden{
           @include dev-border;
 
           animation: hideCase 2s;
